--- a/style.css
+++ b/style.css
@@ -44,9 +44,18 @@ html{
     position:absolute;
     transform: translate(-50%, -50%) scale(0);
     text-shadow: .2rem .2rem .2rem #000;
+    transition: .3s;
 }
 
 .section-1-icons i.change {
     transform: translate(-50%, -50%) scale(1);
+    transition: .3s .3s;
 }
 /* end of section 1 */
+
+/* section 2 */
+.section-2 {
+    width: 100%;
+    height: 100vh;
+}
+/* end of section 2 */
