--- a/style.css
+++ b/style.css
@@ -80,6 +80,40 @@ html{
     justify-content: space-between;
     align-items: center;
     box-shadow: 1rem 1rem 1rem #000;
+    position: relative;
+    transform: rotateY(20deg) skewX(-2deg);
+    transition: transform .5s, box-shadow .5s;
+}
+
+.card:hover{
+    transform: rotateY(20deg) skewX(-2deg) translateY(-3rem);
+    box-shadow: 2rem 2rem 2rem #000;
+}
+
+.card::before {
+    content: "";
+    height: 100%;
+    width: 1rem;
+    background-color: #817824;
+    position: absolute;
+    top: 0;
+    left: -1rem;
+    transform: skewY(45deg);
+    transform-origin: right;
+    box-shadow: -0.1rem -0.1rem 0.1rem #000;
+}
+
+.card::after {
+    content: "";
+    height: 1rem;
+    width: 100%;
+    background-color: #8f8317;
+    position: absolute;
+    top: -1rem;
+    left: 0;
+    transform: skewx(45deg);
+    transform-origin: bottom;
+    box-shadow: -0.1rem -0.1rem 0.1rem #000;
 }
 
 .card-img {
@@ -93,5 +127,21 @@ html{
     letter-spacing: 0.5rem;
     color: #111;
     margin: 2rem 0rem;
+    text-shadow: .3rem .3rem .3rem #000;
+}
+
+.card-btn {
+    width: 70%;
+    background-color: #111;
+    color: #888;
+    border-radius: 5rem;
+    font-size: 1.5rem;
+    font-weight: 800;
+    letter-spacing: .2rem;
+    text-transform: uppercase;
+    border: none;
+    padding: .5rem 0;
+    cursor: pointer;
+    box-shadow: 0.2rem 0.2rem 0.2rem #000;
 }
 /* end of section 2 */
